--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,17 +39,17 @@
 							class="logo-img"
 							preload=""
 							th:src="@{/images/logo.png}">
-						<span>EasyM</span>
+						<span>MBlog Management</span>
 					</a>
 				</div>
 			</div>
 			<div class="nav-right">
 				<ul class="navbar">
-					<li><a class="router-link-active" href="#">菜单1</a></li>
-					<li><a class="" href="#">菜单2</a></li>
-					<li><a class="" href="#">菜单3</a></li>
+<!--					<li><a class="router-link-active" href="#">菜单1</a></li>-->
+<!--					<li><a class="" href="#">菜单2</a></li>-->
+<!--					<li><a class="" href="#">菜单3</a></li>-->
 				</ul>
-				<div class="btn-language">EN</div>
+<!--				<div class="btn-language">EN</div>-->
 			</div>
 		</div>
 	</header>
