--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,11 +45,11 @@
 			</div>
 			<div class="nav-right">
 				<ul class="navbar">
-<!--					<li><a class="router-link-active" href="#">菜单1</a></li>-->
-<!--					<li><a class="" href="#">菜单2</a></li>-->
-<!--					<li><a class="" href="#">菜单3</a></li>-->
+					<!--<li><a class="router-link-active" href="#">菜单1</a></li>-->
+					<li><a th:href="@{/logout.html}">登出</a></li>
+					<!--<li><a class="" href="#">菜单3</a></li>-->
 				</ul>
-<!--				<div class="btn-language">EN</div>-->
+				<!--<div class="btn-language">EN</div>-->
 			</div>
 		</div>
 	</header>
