--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -10,12 +10,12 @@
 <div class="login_div">
 	<div class="left_part">
 		<div class="line"></div>
-		<p class="special_font">多 · 快 · 好 · 省</p>
+		<p class="special_font">Welcome to login</p>
 	</div>
 	<div class="right_part">
 		<div class="top_cont">
 			<i class="iconfont icon-huanying"></i>
-			<p class="special_font">欢迎使用 EasyM</p>
+			<p class="special_font">MBlog Management</p>
 		</div>
 		<form>
 			<div class="item relative">
