--- a/src/main/resources/static/css/page/pagecss_index.css
+++ b/src/main/resources/static/css/page/pagecss_index.css
@@ -119,6 +119,15 @@ html, body {
     background-color: #6190E8;
 }
 
+.nav-container .nav-right .navbar:hover {
+    color: white;
+    background: #6190E8;
+}
+
+.nav-container .nav-right .navbar a:hover {
+    color: white;
+}
+
 .dashbord_frame {
     border: none;
     width: 100%;
