--- a/src/main/resources/templates/demo/demo.html
+++ b/src/main/resources/templates/demo/demo.html
@@ -4,46 +4,12 @@
 	<meta charset="UTF-8"/>
 	<title>Demo</title>
 	<script th:replace="common :: head"></script>
-	<link rel="stylesheet" th:href="@{/css/page/demo.css}"/>
-	<script th:inline="javascript">
-		//加载后台传过来的参数
-	</script>
 </head>
 <body>
 <div th:replace="common :: page_loading"></div>
 <div id="app" ref="app">
-	<el-upload
-			class="upload-demo"
-			th:action="${webRoot}+'/file/upload.do'"
-			multiple
-			:limit="3"
-			:file-list="fileList"
-			list-type="picture-card">
-		<i class="el-icon-plus"></i>
-		<div slot="file" slot-scope="{file}">
-			<img class="el-upload-list__item-thumbnail" :src="file.url" alt="">
-			<span class="el-upload-list__item-actions">
-        <span class="el-upload-list__item-preview"
-			  @click="handlePictureCardPreview(file)">
-          <i class="el-icon-zoom-in"></i>
-        </span>
-        <span v-if="!disabled"
-			  class="el-upload-list__item-delete"
-			  @click="handleDownload(file)">
-          <i class="el-icon-download"></i>
-        </span>
-        <span v-if="!disabled"
-			  class="el-upload-list__item-delete"
-			  @click="handleRemove(file)">
-          <i class="el-icon-delete"></i>
-        </span>
-      </span>
-		</div>
-	</el-upload>
-	<el-dialog :visible.sync="dialogVisible">
-		<img width="100%" :src="dialogImageUrl" alt="">
-	</el-dialog>
+	Demo
 </div>
-<script th:inline="javascript" th:src="@{/js/page/pagejs_demo.js}"></script>
+<script th:inline="javascript" th:src="@{/js/page/demo/pagejs_demo.js}"></script>
 </body>
 </html>
