--- a/src/main/resources/templates/menu/menu.html
+++ b/src/main/resources/templates/menu/menu.html
@@ -15,7 +15,7 @@
 				</el-row>
 			</div>
 			<el-row id="tableRow">
-				<el-table :data="tableData" border height="100%" highlight-current-row row-key="uuid" stripe>
+				<el-table :data="tableData" border height="100%" highlight-current-row row-key="id" stripe>
 					<el-table-column
 							type="selection"
 							width="40">
@@ -109,9 +109,9 @@
 						<el-select clearable v-model="menuForm.parent" style="width:100%" :disabled="menuForm._isEdit">
 							<el-option
 									v-for="item in tablePlantData"
-									:key="item.uuid"
+									:key="item.id"
 									:label="item._title"
-									:value="item.uuid">
+									:value="item.id">
 							</el-option>
 						</el-select>
 					</el-form-item>
