--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -4,8 +4,18 @@
 	<meta charset="UTF-8" />
 	<title>404</title>
 	<script th:replace="common :: head"></script>
+	<link rel="stylesheet" th:href="@{/css/page/page_404.css}">
 </head>
 <body>
-	my 404
+<div class="fullwidth">
+	<div class="mblog-404">
+		<div class="mblog-desk-404">
+			<div class="ifr-desk-content"></div>
+			<div class="mblog-404-title">出错了，着陆失败</div>
+			<div class="mblog-404-subtitle">Oops, It seems that you’ve landed on the wrong planet.</div>
+			<div class="mblog-404-des">错误代码：404</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
