1. fix module name 2. add module func

--- a/src/main/resources/static/css/page/page_css_common_table.css
+++ b/src/main/resources/static/css/page/page_css_common_table.css
@@ -17,3 +17,12 @@ body {
 #tableRow {
     overflow: hidden;
 }
+
+.el-textarea {
+    height: 100% !important;
+}
+
+#m_blog_template {
+    height: 100% !important;
+    font-family: Monospaced, serif;
+}
