--- a/src/main/resources/templates/module/module_list.html
+++ b/src/main/resources/templates/module/module_list.html
@@ -15,7 +15,7 @@
 				<el-form-item label="UID" prop="uid">
 					<el-input type="text" v-model="filterForm.uid"></el-input>
 				</el-form-item>
-				<el-form-item label="模板名" prop="name">
+				<el-form-item label="模块名" prop="name">
 					<el-input type="text" v-model="filterForm.name"></el-input>
 				</el-form-item>
 				<el-form-item label="创建时间" prop="create_date">
@@ -55,7 +55,7 @@
 					sortable>
 			</el-table-column>
 			<el-table-column
-					label="用户名"
+					label="模块名"
 					prop="_name"
 					show-overflow-tooltip
 					sortable>
