--- a/src/main/resources/templates/module/add_module.html
+++ b/src/main/resources/templates/module/add_module.html
@@ -12,10 +12,10 @@
 <div id="app" ref="app">
 	<div id="topRow">
 		<el-form :inline="true">
-			<el-form-item label="模板名">
+			<el-form-item label="模块名">
 				<el-input type="text" v-model="module_name"></el-input>
 			</el-form-item>
-			<el-form-item label="模板备注">
+			<el-form-item label="模块备注">
 				<el-input type="text" v-model="module_note"></el-input>
 			</el-form-item>
 		</el-form>
