--- a/src/main/resources/templates/module/preview-module.html
+++ b/src/main/resources/templates/module/preview-module.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Module Preview</title>
-	<script th:text="${js}"></script>
-	<style th:text="${css}"></style>
+	<script th:utext="${js}"></script>
+	<style th:utext="${css}"></style>
 </head>
 <body th:utext="${body}">
 </body>
