添加模板【参数例子】

--- a/src/main/resources/templates/module/edit-module.html
+++ b/src/main/resources/templates/module/edit-module.html
@@ -32,7 +32,7 @@
 					<el-input autosize id="m_blog_js" type="textarea" v-model="module_js"></el-input>
 				</el-form-item>
 				<el-form-item label="Preview Param">
-					<el-input autosize id="m_blog_param" type="textarea" v-model="preview_param"></el-input>
+					<el-input autosize id="m_blog_param" type="textarea" v-model="module_param"></el-input>
 				</el-form-item>
 			</el-form>
 		</el-col>
