--- a/src/main/resources/static/css/page/page_css_edit_module.css
+++ b/src/main/resources/static/css/page/page_css_edit_module.css
@@ -1,15 +1,57 @@
-
-#rightPart {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+ul {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	padding-inline-start: 0;
+	margin-block-start: 0;
+	margin-block-end: 0;
 }
 
-#rightPart .editorBox {
-    flex: 1;
+ul li {
+	list-style: none;
 }
 
-#rightPart .editorBox .editor {
-    height: 100%;
-    width: 100%;
+ul li input {
+	display: none;
+}
+
+ul li label {
+	float: left;
+	width: 100px;
+	text-align: center;
+	line-height: 30px;
+	border-right: 0;
+	box-sizing: border-box;
+	cursor: pointer;
+}
+
+ul li input:checked + label {
+	color: #409EFF;
+	font-weight: bold;
+	border-bottom: 2px solid #409EFF;
+}
+
+ul li .content {
+	opacity: 0;
+	visibility: hidden;
+	position: absolute;
+	left: 0;
+	top: 31px;
+	width: 100%;
+	height: calc(100% - 31px);
+	border: 1px solid #eee;
+	box-sizing: border-box;
+	color: #fff;
+	transition: all .3s;
+}
+
+ul li input:checked ~ .content {
+	opacity: 1;
+	visibility: visible;
+}
+
+.editor {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
